@@ -429,6 +429,7 @@ Views 3.x-7.x-dev
     o #963382 by aidanlis: Fix typo in mathematical expression field help text.
     o #807614 by dereine: Test filter_numeric.
     o #928000 by mfer, dereine: form.js dependency missing.
+    o by dereine: Fix some notices.
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
